<resources>
    <string name="app_name">FunnyClips</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>

    <string name="auto_update_opened">Automatic update turned on!</string>
    <string name="all_cache_cleaned">All caches have been cleared!</string>

    <string name="transition_album_img">transition_album_img</string>
    <string name="transition_video_img">transition_video_img</string>
    <string name="transition_gank_img">transition_gank_img</string>
    <string name="transition_fab_icon">transition_fab_icon</string>
    <string name="transition_about_img">transition_about_img</string>
    <string name="transition_category_title">transition_category_title</string>
    <string name="transition_avatar">transition_avatar</string>

    <string name="cd_second_item_image">second item image</string>
    <string name="cd_avatar">avatar</string>
    <string name="cd_header_background">header background</string>
    <string name="cd_header_item_background">header item background</string>
    <string name="more_label">View All</string>
    <string name="loading">loading...</string>
    <string name="i_have_bottom_line">you’ve reached bottom line</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Activity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_trending">Trending</string>
    <string name="title_subscription">Subscription</string>
    <string name="title_library">Library</string>
    <string name="transition_poster">movie_poster</string>

    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="github">Github</string>
    <string name="copyright_content">The video resources come from an open eye and the copyright is owned by the owner.</string>
    <string name="current_version">Current version：</string>

    <!--about us-->
    <string name="gmail">Gmail：<a href="victor://mail?gmail=victor423099@gmail.com">victor423099@gmail.com</a></string>
    <string name="github_url">https://github.com/Victor2018</string>
    <string name="github_issues">Issues：<a href="victor://openurl?title=Github Issues&amp;url=https://github.com/Victor2018/FunnyClips/issues">Feedback problem</a></string>
    <string name="download_app">Download：<a href="victor://openurl?title=Download app&amp;url=http://d.firim.info/FunnyClips">Poke here</a></string>
    <string name="about_us">About us</string>
    <string name="support_us">Support us</string>
    <string name="share_app">Share an funny app for you：http://d.firim.info/FunnyClips</string>

    <string name="select_category">Select category</string>
    <string name="main_title">Funny, we are serious</string>
    <string name="auto_update">Auto update</string>
    <string name="clean_cache">Clean cache</string>
    <string name="copy_right">Copy right</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="copy_to_clipboard">Copied to the clipboard</string>
    <string name="cope_the_url">Cope the url</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="category">Category</string>
    <string name="follow">Follow</string>
    <string name="weekly_ranking">Weekly ranking</string>
    <string name="monthly_ranking">Monthly ranking</string>
    <string name="total_ranking">Total ranking</string>
    <string name="mail_to_me_tip">Please select the mail application</string>
    <string name="search_tip">Enter search keywords</string>
    <string name="description">Description:\nThis is a short video application of MaterialDesign design style coding by kotlin. The video resources are from open source. This application is only for learning and use. Please do not use it!</string>
</resources>
