<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_678"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/mCtlVideoTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/transparent"
            app:expandedTitleMarginStart="@dimen/dp_50"
            app:expandedTitleMarginEnd="@dimen/dp_65"
            app:title="@string/about_us">
            <ImageView
                android:id="@+id/mIvAboutPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:scaleType="centerCrop"
                android:src="@mipmap/img_about_bg"
                android:transitionName="@string/transition_about_img"/>
            <ImageView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"/>

            <com.victor.clips.ui.widget.ColorTextView
                android:id="@+id/mCtvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_88"
                android:gravity="center"
                android:textSize="@dimen/dp_28"
                android:textColor="?attr/colorPrimary"
                android:textColorLink="?attr/colorPrimaryDark"
                tools:text="v1.0.0"/>
            <android.support.v7.widget.Toolbar
                android:id="@+id/mAboutToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/transparent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/mNsvAbout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                app:cardElevation="@dimen/dp_5">
                <TextView
                    android:id="@+id/mTvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_30"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:lineSpacingMultiplier="1.5"
                    android:textSize="@dimen/dp_28"
                    android:textColor="@color/color_7C7C7C"
                    android:text="@string/description" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:foreground="?attr/selectableItemBackground"
                app:cardElevation="@dimen/dp_5">
                <TextView
                    android:id="@+id/mTvGmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_30"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dp_28"
                    android:textColor="@color/color_7C7C7C"
                    android:text="@string/gmail" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:foreground="?attr/selectableItemBackground"
                app:cardElevation="@dimen/dp_5">
                <TextView
                    android:id="@+id/mTvGithub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_30"
                    android:textSize="@dimen/dp_28"
                    android:textColor="@color/color_7C7C7C"
                    android:text="@string/github_project"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:foreground="?attr/selectableItemBackground"
                app:cardElevation="@dimen/dp_5">
                <TextView
                    android:id="@+id/mTvDownloadApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_30"
                    android:textColor="@color/color_7C7C7C"
                    android:textSize="@dimen/dp_28"
                    android:text="@string/download_app" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:foreground="?attr/selectableItemBackground"
                app:cardElevation="@dimen/dp_5">
                <TextView
                    android:id="@+id/mTvSupport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_30"
                    android:textSize="@dimen/dp_28"
                    android:textColor="@color/color_7C7C7C"
                    android:text="@string/support_us" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_88"
                    android:layout_marginBottom="@dimen/dp_30"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/dp_200"
                        android:layout_height="@dimen/dp_200"
                        android:src="@mipmap/img_wx"/>
                    <ImageView
                        android:layout_width="@dimen/dp_200"
                        android:layout_height="@dimen/dp_200"
                        android:layout_marginLeft="@dimen/dp_66"
                        android:src="@mipmap/img_ali"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/mFabGitHub"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@mipmap/ic_github"
        android:layout_margin="@dimen/fab_margin"
        android:transitionName="@string/transition_fab_icon"
        android:clickable="true"/>

</android.support.design.widget.CoordinatorLayout>
